# picam_orchestrator

./: CMakeLists.txt  README.md  config.ini
debian/: changelog  conffiles  control  copyright  debhelper-build-stamp  files  picam-orchestrator.postrm.debhelper  picam-orchestrator.substvars  postinst  prerm  rules
debian/picam-orchestrator/DEBIAN/: conffiles  control  md5sums  postrm
debian/picam-orchestrator/etc/picam-orchestrator/: config.ini
debian/picam-orchestrator/lib/systemd/system/: picam-orchestrator.service
src/: config.hpp  main.cpp
